objects/Release__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a specific instance of the product and all of the related components that make up the specific instance.</description>
    <fields>
        <fullName>Adapt_Ongoing_Support__c</fullName>
        <description>Number of days for support</description>
        <label>Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_End_Date__c</fullName>
        <description>End Date for build</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Build End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Start_Date__c</fullName>
        <description>Start Date for build</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Build Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Unit_Test__c</fullName>
        <description>Estimated effort in days for build</description>
        <label>Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deploy_End_Date__c</fullName>
        <description>Deployment end date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deploy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deploy_Start_Date__c</fullName>
        <description>Deployment start date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deploy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description about Release</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_End_Date__c</fullName>
        <description>End Date for design phase</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Design End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Start_Date__c</fullName>
        <description>Start date for design</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Design Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <description>Number of days required for design</description>
        <label>Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of this release.</description>
        <inlineHelpText>Owner of this release.</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMT2009_SIT__c</fullName>
        <description>Number of days required for testing</description>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMT2009_Train_Deploy__c</fullName>
        <description>Number of days required for deployment</description>
        <label>Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMT2009_UAT__c</fullName>
        <description>Number of days required for UAT</description>
        <label>UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select a release to which this release is related to.</description>
        <inlineHelpText>Select an existing release to which the current release is related to.</inlineHelpText>
        <label>Parent Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <description>Estimated date of end</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <description>Estimated date of Start</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proejct_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Month__c</fullName>
        <formula>CASE( 
MONTH(Proejct_Start_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Actual_End_Date__c</fullName>
        <description>Actual date of end of release</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Planned_End_Date__c</fullName>
        <description>Estimated date of end of release</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Start_Date__c</fullName>
        <description>Start Date of release</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>Release Number</description>
        <label>Release #</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirements_Gathering__c</fullName>
        <description>Total Level of Effort (Days) taken in plan</description>
        <label>Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOURCE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOURCE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <description>Release status update</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Release status update</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Displays a status as red, green or yellow ball</description>
        <inlineHelpText>Green: Milestone completion on target
Yellow: Milestone completion at risk
Red: Milestone completion planned to be missed or missed</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_End_Date__c</fullName>
        <description>End date for support</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Support End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Start_Date__c</fullName>
        <description>Start date for support</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_End_Date__c</fullName>
        <description>End date for Test</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Test End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Start_Date__c</fullName>
        <description>Start date for Test</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Adapt_Ongoing_Support_Capacity__c</fullName>
        <description>Total available support capacity</description>
        <label>Total Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Available_Capacity__c</fullName>
        <description>Total available capacity which is sum of total available plan, design, build, test, UAT, deploy &amp; support capacity</description>
        <formula>Total_Plan_Capacity__c  +  Total_Design_Capacity__c  +  Total_Build_Capacity__c  +  Total_Test_Capacity__c  +  Total_Deploy_Capacity__c  +  Total_UAT__c  + Total_Adapt_Ongoing_Support_Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Available Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Build_Capacity__c</fullName>
        <description>Total available build capacity</description>
        <label>Total Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Deploy_Capacity__c</fullName>
        <description>Total available deploy capacity</description>
        <label>Total Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Design_Capacity__c</fullName>
        <description>Total available design capacity</description>
        <label>Total Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimate__c</fullName>
        <description>Total Level of Effort (Days) taken in plan, design, build, test, UAT, deploy &amp; support</description>
        <formula>Requirements_Gathering__c +  Design__c +  Build_Unit_Test__c +  PMT2009_SIT__c +  PMT2009_UAT__c +  PMT2009_Train_Deploy__c +  Adapt_Ongoing_Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Plan_Capacity__c</fullName>
        <description>Total available plan capacity</description>
        <label>Total Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Test_Capacity__c</fullName>
        <description>Total available test capacity</description>
        <label>Total Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_UAT__c</fullName>
        <description>Total available UAT capacity</description>
        <label>Total UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_End_Date__c</fullName>
        <description>End date for UAT</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UAT End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT_Start_Date__c</fullName>
        <description>Start date for UAT</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UAT Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_End_Date__c</fullName>
        <formula>CASE( 
MONTH( Project_End_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Start_Date__c</fullName>
        <formula>CASE( 
MONTH( Proejct_Start_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly_Start_Date</label>
        <type>Text</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Release__c</columns>
        <columns>Release_Start_Date__c</columns>
        <columns>Release_Planned_End_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Release_Actual_End_Date_Validation</fullName>
        <active>true</active>
        <description>Actual end date should not be greater  than today&apos;s date</description>
        <errorConditionFormula>Release_Actual_End_Date__c  &gt; Today()</errorConditionFormula>
        <errorDisplayField>Release_Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual end date should not be greater  than today&apos;s date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Releases_Date_Validation</fullName>
        <active>true</active>
        <description>Releases_Date_Validation</description>
        <errorConditionFormula>OR( Release_Actual_End_Date__c  &lt;  Release_Start_Date__c ,  Release_Planned_End_Date__c  &lt;  Release_Start_Date__c )</errorConditionFormula>
        <errorMessage>Release Start/End Date should be later than Release Start Date.</errorMessage>
    </validationRules>
</CustomObject>